# son-idl

./: .gitignore  404.html  LICENSE  README.md  index.html  versions.json
1.0.3/: 404.html  index.html
1.0.3/json_reference/: index.html
1.0.3/technology-explainer/: index.html
2.0.0/: 404.html  index.html
2.0.0/generated_content/all_examples/: index.html
2.0.0/generated_content/formatted_protoc_output/: index.html
2.0.0/generated_content/protoc_output/: index.html
2.0.0/generated_content/sw-cm-son-idl-preview/: index.html
2.0.0/licence/: index.html
2.0.0/message-reference/: index.html
2.0.0/networking/: index.html
2.0.0/overview/: index.html
2.0.0/pip-install/: index.html
2.0.0/python-examples/: index.html
2.0.0/reference-and-examples/: index.html
2.0.0/search/: search_index.json
2.0.0/stylesheets/: patch.css
2.0.0/vehicle-guides/: index.html
2.0.0/versioning-and-compatibility/: index.html
assets/: schema.json
examples/python/: README.md  basic_commands.py  device_information.py  exception_handling.py  get_version.py  observing_navigation_data.py  observing_sensor_data.py  observing_tcp_outputs.py  setting_device_lever_arms.py  setting_source_lever_arms.py  writing_to_comms_ports.py
examples/python/algorithms/: README.md
examples/python/algorithms/ahrs_algorithm/: ahrs_algorithm_command_reset.py  ahrs_algorithm_configuration.py
examples/python/algorithms/dvl_algorithm/: dvl_algorithm_configuration.py
examples/python/algorithms/ins_algorithm/: ins_algorithm_command_reset.py  ins_algorithm_configuration.py  ins_algorithm_observation.py
examples/python/modules/: README.md
examples/python/modules/battery_module/: battery_module_configuration.py
examples/python/modules/device_module/: device_module_command_factory_reset.py  device_module_command_shutdown.py
examples/python/modules/external_logging_module/: external_logging_module_configuration.py
examples/python/modules/navigation_module/: navigation_module_observation.py
examples/python/modules/network_module/: network_module_configuration.py
examples/python/modules/output_message_module/: output_message_module_command_add_output.py  output_message_module_command_remove_output.py  output_message_module_configuration.py
examples/python/modules/time_module/: time_module_configuration.py
examples/python/ports/: README.md
examples/python/ports/ethernet_port/: ethernet_port_list_configuration.py
examples/python/ports/external_control_port/: external_control_port_list_configuration.py
examples/python/ports/power_pass_port/: power_pass_port_list_configuration.py
examples/python/ports/serial_port/: serial_port_list_configuration.py
examples/python/ports/trigger_port/: trigger_port_list_configuration.py
examples/python/sensors/: README.md
examples/python/sensors/dvl_sensor/: dvl_sensor_configuration.py
examples/python/services/: command_service.py  comms_service.py  configuration_service.py  observation_service.py
examples/python/sources/: README.md
examples/python/sources/depth_source/: depth_source_configuration.py
examples/python/sources/gnss_source/: gnss_source_configuration.py  gnss_source_observation.py
examples/python/sources/sound_velocity_source/: sound_velocity_source_configuration.py  sound_velocity_source_observation.py
examples/python/sources/susbl_source/: susbl_source_configuration.py  susbl_source_observation.py
examples/python/sources/time_module/: time_module_configuration.py
external_reference/: index.html
integration/: index.html
json_reference/: index.html
libraries/python/sonardyne_api/: hatch_build.py  pyproject.toml  sed.py
libraries/python/sonardyne_api/sonardyne_api/: __init__.py  simple_binary_protocol.py  unpacking.py  wrapper_framed_tcp.py  wrapper_grpc.py  wrapper_json_tcp.py
license/: index.html
protocol_reference/: index.html
quick-start/: index.html
reference/: index.html
search/: search_index.json
sonardyne-public/idl/: README.md
sonardyne-public/idl/common/: primitives.proto  result.proto  timestamp.proto  uid.proto  version.proto
sonardyne-public/idl/configuration/: aiding_configuration.proto  configuration_envelope.proto  dvl_configuration.proto  reset_configuration.proto  shutdown_configuration.proto  sound_velocity_configuration.proto
sonardyne-public/idl/services/: state_service.proto
sonardyne-public/son_idl_docs/: mkdocs.yml
sonardyne-public/son_idl_docs/docs/: index.md  integration.md  json_reference.md  protocol_reference.md  quick-start.md  reference.md  technology-explainer.md
sonardyne-public/son_idl_docs/example_code/cpp/: CMakeLists.txt
sonardyne-public/son_idl_docs/example_code/cpp/src/: CMakeLists.txt  main.cpp
sonardyne.public/example_code/cpp/src/: CMakeLists.txt
sonardyne.public/example_code/cs/: Program.cs  SonGrpcClient.csproj
sonardyne.public/example_code/py/: configuration_pb2.py  configuration_uid_pb2.py  result_pb2.py  service_pb2.py  service_pb2_grpc.py  timestamp_pb2.py  version_pb2.py
sonardyne.public/idl/: README.md  configuration.proto  result.proto  service.proto  timestamp.proto  uid.proto  version.proto
sonardyne.public/mkdocs/: README.md  launch.bat  mkdocs.yml
sonardyne.public/mkdocs/docs/: index.md  integration.md  protocol_reference.md  quick-start.md  reference.md  technology-explainer.md
sonardyne.public/son_idl_docs/: README.md  mkdocs.yml  package-lock.json  package.json
sonardyne.public/son_idl_docs/docs/: external_reference.md  index.md  license.md
sonardyne.public/son_idl_docs/overrides/: main.html
sonardyne/api/common/: matching_criteria.proto  result.proto  timestamp.proto  unique_id.proto  user_level.proto
stylesheets/: colourscheme.css  extra.css  fonts.css  import-styles.css  styles.css
technology-explainer/: index.html
v1.0.3/external_reference/: index.html
v1.0.3/integration/: index.html
v1.0.3/license/: index.html
v1.0.3/protocol_reference/: index.html
v1.0.3/quick-start/: index.html
v1.0.3/reference/: index.html
v1.0.3/search/: search_index.json
v1.0.3/stylesheets/: extra.css
(+383 files in other folders)
